[package]
name = "minus"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
llama-cpp-2 = { version = "0.1", features = [] }
tokenizers = "0.21"
hf-hub = { version = "0.4", default-features = false, features = ["ureq", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
encoding_rs = "0.8"

[profile.release]
opt-level = 3
strip = true
